client/css/home.css
.cardbg {
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    display: block;
    min-height: 1000px;
    position: fixed;
    left: 0;
    right: 0;
    z-index: -1;
}

.cardbg-mobile {
    display: block;;
    min-height: 100%;
    left: 0;
    position: fixed;
    right: 0;
    z-index: -1;
}

.custom-validation-error {
    float: left;
    color: red;
}

.login-link {
    margin-right: 5%;
}

.form-zip {
    text-align: center;
    height: 54px;
    width: 100%;
    padding: 6px 12px;
    font-size: 130%;
    line-height: 1.428571429;
    color: #555;
    vertical-align: middle;
    background-color: #fff;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
}

::-webkit-input-placeholder {
    color: rgb(138, 140, 138);
}

:-moz-placeholder {
    color: rgb(138, 140, 138);
}

::-moz-placeholder {
    color: rgb(138, 140, 138);
}

:-ms-input-placeholder {
    color: rgb(138, 140, 138);
}

.slider, .white{
    padding:0 0 0 0 !important;
}

#slider_container{
    max-width: 1442px;
}

.indicator-item.active{
    background-color: #f57c00 !important;
}

.filter{
    z-index: 100;
    position: absolute;
    background: rgba(0, 0, 0, 0.5);
    width: 100%;
    height: 100%;
}

.up{
    z-index: 500;
}

.slider{
    height: 100% !important;
}

.indicators{
    z-index: 50;
    padding-bottom: 15px;
}

